# python_arrays

./: .gitmodules  CMakeLists.txt
pybind11/: CMakeLists.txt  bmi-example.cpp
pybind11/tests/: test_basic.py
swig/: BMIswig.cpp  BMIswig.h  CMakeLists.txt  bmi_swig.i
swig/tests/: test_basic.py
